@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 22-Jan-2011 Jean-Marie Simonet
  # Updating some TT credits
+ # [#24525] In Bluestork, longer labels are being cut off especially radio button labels. Thanks Andrea
 
 21-Jan-2011 Christophe Demko
  # [#24523] Improve the cpanel of admin templates + correting some errors
